pipeline/kubernetes/booking-service-expose.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: booking-service
  name: booking-service
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: booking-service
  type: ClusterIP
