pipeline/kubernetes/employee-service-expose.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: employee-service
  name: employee-service
spec:
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: employee-service
  type: ClusterIP
