pipeline/kubernetes/opendesk-web-ui-expose.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opendesk-web-ui
  name: opendesk-web-ui
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: opendesk-web-ui
  type: ClusterIP
