pipeline/kubernetes/organisation-service-expose.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: organisation-service
  name: organisation-service
spec:
  ports:
  - port: 8084
    protocol: TCP
    targetPort: 8084
  selector:
    app: organisation-service
  type: ClusterIP
